--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,11 @@ concurrency:
   group: release-${{ github.workflow }}-${{ github.ref }}-${{ github.run_id }}
   cancel-in-progress: false
 
+env:
+  # === SBOM 生成ツール差し替え前提のプラガブル設定 ===
+  # 例: SYFT_CDX / TRIVY_CDX / YOUR_TOOL など。今は "DISABLED" 固定。
+  SBOM_TOOL: DISABLED
+
 jobs:
   per-flavor:
     runs-on: ubuntu-latest
@@ -25,19 +30,59 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install syft, cyclonedx-cli & jq
+      # ------------------------------------------------------------
+      # SBOM 生成ツールのインストール（プラガブル）
+      # 現在は SBOM を生成しないため、すべてコメントアウト。
+      #
+      # 切り替え方:
+      # - SBOM_TOOL=SYFT_CDX にしてこのステップ群のコメントを外す
+      # - 他ツールにする場合は "Install: <TOOL_NAME>" ブロックを参考に置換
+      # ------------------------------------------------------------
+      # - name: Install: syft + cyclonedx-cli + jq (SBOM_TOOL=SYFT_CDX)
+      #   if: env.SBOM_TOOL == 'SYFT_CDX'
+      #   run: |
+      #     set -euxo pipefail
+      #     curl -sSfL https://get.anchore.io/syft | sudo sh -s -- -b /usr/local/bin
+      #     syft --version
+      #     sudo apt-get update
+      #     sudo apt-get install -y jq gzip
+      #     jq --version || true
+      #     CLI_VER="v0.27.0"
+      #     curl -sSL -o /tmp/cdx "https://github.com/CycloneDX/cyclonedx-cli/releases/download/${CLI_VER}/cyclonedx-linux-x64"
+      #     chmod +x /tmp/cdx
+      #     sudo mv /tmp/cdx /usr/local/bin/cyclonedx
+      #     cyclonedx version || true
+
+      # - name: Install: trivy + jq (SBOM_TOOL=TRIVY_CDX)
+      #   if: env.SBOM_TOOL == 'TRIVY_CDX'
+      #   run: |
+      #     set -euxo pipefail
+      #     sudo apt-get update
+      #     sudo apt-get install -y jq gzip
+      #     jq --version || true
+      #     sudo apt-get install -y wget
+      #     wget -qO- https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+      #     echo "deb https://aquasecurity.github.io/trivy-repo/deb stable main" | sudo tee /etc/apt/sources.list.d/trivy.list
+      #     sudo apt-get update && sudo apt-get install -y trivy
+      #     trivy --version
+
+      # - name: Install: your-tool (SBOM_TOOL=YOUR_TOOL)
+      #   if: env.SBOM_TOOL == 'YOUR_TOOL'
+      #   run: |
+      #     set -euxo pipefail
+      #     # TODO: ここに独自ツールの導入手順を記載
+      #     # 例: curl -L -o /usr/local/bin/yourtool <url>; chmod +x /usr/local/bin/yourtool
+      #     sudo apt-get update && sudo apt-get install -y jq gzip
+      #     jq --version || true
+
+      # SBOM 無効化時は jq/gzip のみ（プレースホルダ生成に使用）
+      - name: Install jq & gzip only (SBOM generation disabled)
+        if: env.SBOM_TOOL == 'DISABLED'
         run: |
           set -euxo pipefail
-          curl -sSfL https://get.anchore.io/syft | sudo sh -s -- -b /usr/local/bin
-          syft --version
           sudo apt-get update
           sudo apt-get install -y jq gzip
           jq --version || true
-          CLI_VER="v0.27.0"
-          curl -sSL -o /tmp/cdx "https://github.com/CycloneDX/cyclonedx-cli/releases/download/${CLI_VER}/cyclonedx-linux-x64"
-          chmod +x /tmp/cdx
-          sudo mv /tmp/cdx /usr/local/bin/cyclonedx
-          cyclonedx version || true
 
       - name: Extract release numbers
         id: ver
@@ -78,128 +123,208 @@ jobs:
           echo "has_old=true" >> "$GITHUB_OUTPUT"
           echo "old_ref=$OLD" >> "$GITHUB_OUTPUT"
 
-      - name: Generate SBOMs (CycloneDX JSON)
-        id: sbom
+      # ------------------------------------------------------------
+      # SBOM 生成（プラガブル）
+      # 現在は DISABLED のため、全ツール実行部をコメントアウトし、
+      # 代わりにプレースホルダを出力する。
+      # 有効化したいツールのブロックのコメントを外して SBOM_TOOL を切替。
+      # ------------------------------------------------------------
+
+      # - name: Generate SBOM with Syft (SBOM_TOOL=SYFT_CDX)
+      #   id: sbom_syft
+      #   if: env.SBOM_TOOL == 'SYFT_CDX'
+      #   shell: bash
+      #   run: |
+      #     set -euo pipefail
+      #     rel='${{ steps.ver.outputs.rel }}'
+      #     prev='${{ steps.ver.outputs.prev }}'
+      #     flavor='${{ matrix.flavor }}'
+      #     NEW="almalinux${rel}-${flavor}:${{ steps.ver.outputs.tag }}"
+      #     mkdir -p "sbom/$rel" "sbom/$prev"
+      #     NEW_JSON="sbom/$rel/$flavor.cdx.json"
+      #     for i in 1 2 3; do
+      #       syft "docker:$NEW" -o cyclonedx-json > "$NEW_JSON" && break
+      #       echo "syft NEW failed (try $i), retry..." >&2
+      #       sleep 5
+      #       [[ $i -eq 3 ]] && { echo "syft NEW failed 3 times"; exit 1; }
+      #     done
+      #     echo "new_json=$NEW_JSON" >> "$GITHUB_OUTPUT"
+      #     if [[ '${{ steps.oldimg.outputs.has_old }}' == 'true' ]]; then
+      #       OLD='${{ steps.oldimg.outputs.old_ref }}'
+      #       OLD_JSON="sbom/$prev/$flavor.cdx.json"
+      #       for i in 1 2 3; do
+      #         syft "docker:$OLD" -o cyclonedx-json > "$OLD_JSON" && break
+      #         echo "syft OLD failed (try $i), retry..." >&2
+      #         sleep 5
+      #         if [[ $i -eq 3 ]]; then
+      #           echo "syft OLD failed 3 times; treat as initial."
+      #           OLD_JSON=""
+      #           break
+      #         fi
+      #       done
+      #       if [[ -n "$OLD_JSON" ]]; then
+      #         echo "has_old_sbom=true" >> "$GITHUB_OUTPUT"
+      #         echo "old_json=$OLD_JSON" >> "$GITHUB_OUTPUT"
+      #       else
+      #         echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
+      #       fi
+      #     else
+      #       echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
+      #     fi
+
+      # - name: Generate SBOM with Trivy (SBOM_TOOL=TRIVY_CDX)
+      #   id: sbom_trivy
+      #   if: env.SBOM_TOOL == 'TRIVY_CDX'
+      #   shell: bash
+      #   run: |
+      #     set -euo pipefail
+      #     rel='${{ steps.ver.outputs.rel }}'
+      #     prev='${{ steps.ver.outputs.prev }}'
+      #     flavor='${{ matrix.flavor }}'
+      #     NEW="almalinux${rel}-${flavor}:${{ steps.ver.outputs.tag }}"
+      #     mkdir -p "sbom/$rel" "sbom/$prev"
+      #     NEW_JSON="sbom/$rel/$flavor.cdx.json"
+      #     trivy sbom --format cyclonedx --output "$NEW_JSON" "docker:$NEW"
+      #     echo "new_json=$NEW_JSON" >> "$GITHUB_OUTPUT"
+      #     if [[ '${{ steps.oldimg.outputs.has_old }}' == 'true' ]]; then
+      #       OLD='${{ steps.oldimg.outputs.old_ref }}'
+      #       OLD_JSON="sbom/$prev/$flavor.cdx.json"
+      #       trivy sbom --format cyclonedx --output "$OLD_JSON" "docker:$OLD" || OLD_JSON=""
+      #       if [[ -n "$OLD_JSON" ]]; then
+      #         echo "has_old_sbom=true" >> "$GITHUB_OUTPUT"
+      #         echo "old_json=$OLD_JSON" >> "$GITHUB_OUTPUT"
+      #       else
+      #         echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
+      #       fi
+      #     else
+      #       echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
+      #     fi
+
+      # - name: Generate SBOM with YourTool (SBOM_TOOL=YOUR_TOOL)
+      #   id: sbom_yourtool
+      #   if: env.SBOM_TOOL == 'YOUR_TOOL'
+      #   shell: bash
+      #   run: |
+      #     set -euo pipefail
+      #     rel='${{ steps.ver.outputs.rel }}'
+      #     prev='${{ steps.ver.outputs.prev }}'
+      #     flavor='${{ matrix.flavor }}'
+      #     NEW="almalinux${rel}-${flavor}:${{ steps.ver.outputs.tag }}"
+      #     mkdir -p "sbom/$rel" "sbom/$prev"
+      #     NEW_JSON="sbom/$rel/$flavor.cdx.json"
+      #     # TODO: ここで "$NEW" から CycloneDX JSON を "$NEW_JSON" に出力する
+      #     # 例: yourtool sbom --format cyclonedx-json --output "$NEW_JSON" "docker:$NEW"
+      #     echo "new_json=$NEW_JSON" >> "$GITHUB_OUTPUT"
+      #     # 旧イメージも同様に出力（存在時）
+      #     if [[ '${{ steps.oldimg.outputs.has_old }}' == 'true' ]]; then
+      #       OLD='${{ steps.oldimg.outputs.old_ref }}'
+      #       OLD_JSON="sbom/$prev/$flavor.cdx.json"
+      #       # TODO: yourtool で旧 SBOM を生成 or 取得。失敗時は空に。
+      #       # yourtool sbom --format cyclonedx-json --output "$OLD_JSON" "docker:$OLD" || OLD_JSON=""
+      #       if [[ -n "$OLD_JSON" ]]; then
+      #         echo "has_old_sbom=true" >> "$GITHUB_OUTPUT"
+      #         echo "old_json=$OLD_JSON" >> "$GITHUB_OUTPUT"
+      #       else
+      #         echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
+      #       fi
+      #     else
+      #       echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
+      #     fi
+
+      # ------------------------------------------------------------
+      # SBOM Diff（プラガブル）
+      # - SYFT_CDX の場合: cyclonedx-cli を使用（下記ブロック参照）
+      # - TRIVY_CDX / YOUR_TOOL の場合: 同等の diff/compare コマンド or 独自ロジックを挿入
+      # 現在は DISABLED のため、プレースホルダのみ生成。
+      # ------------------------------------------------------------
+
+      # - name: Generate SBOM diff with cyclonedx-cli (SBOM_TOOL=SYFT_CDX)
+      #   if: env.SBOM_TOOL == 'SYFT_CDX'
+      #   shell: bash
+      #   run: |
+      #     set -euo pipefail
+      #     rel='${{ steps.ver.outputs.rel }}'
+      #     prev='${{ steps.ver.outputs.prev }}'
+      #     flavor='${{ matrix.flavor }}'
+      #     NEW_JSON='${{ steps.sbom_syft.outputs.new_json }}'
+      #     OLD_JSON='${{ steps.sbom_syft.outputs.old_json }}'
+      #     OUT="RELEASE_CHANGELOG-${flavor}.md"
+      #     if [[ ! -f "$NEW_JSON" ]]; then
+      #       echo "NEW SBOM missing: $NEW_JSON" >&2
+      #       exit 1
+      #     fi
+      #     if [[ '${{ steps.sbom_syft.outputs.has_old_sbom }}' != 'true' || ! -f "$OLD_JSON" ]]; then
+      #       {
+      #         echo "# Initial Release SBOM: AlmaLinux $rel ($flavor)"
+      #         echo
+      #         echo "- SBOM(new): \`$NEW_JSON\`"
+      #         echo
+      #         echo "_No previous SBOM to diff against._"
+      #       } > "$OUT"
+      #     else
+      #       {
+      #         echo "# SBOM Diff (CycloneDX): $prev → $rel ($flavor)"
+      #         echo
+      #         echo "- SBOM(old): \`$OLD_JSON\`"
+      #         echo "- SBOM(new): \`$NEW_JSON\`"
+      #         echo
+      #         echo "## Components diff"
+      #         echo '```'
+      #         cyclonedx diff --from-format json --to-format json \
+      #           "$OLD_JSON" "$NEW_JSON" --component-versions || true
+      #         echo '```'
+      #       } > "$OUT"
+      #     fi
+      #     gzip -9f < "$OUT" > "${OUT}.gz"
+
+      # - name: Generate SBOM diff with your-tool (SBOM_TOOL=TRIVY_CDX/YOUR_TOOL)
+      #   if: env.SBOM_TOOL == 'TRIVY_CDX' || env.SBOM_TOOL == 'YOUR_TOOL'
+      #   shell: bash
+      #   run: |
+      #     set -euo pipefail
+      #     # TODO: TRIVY_CDX / YOUR_TOOL の diff 出力を Markdown に整形して OUT に書き出す
+      #     # NEW_JSON/OLD_JSON の取得はそれぞれの sbom_* ステップの outputs を参照
+      #     # gzip も同様に作成
+      #     :
+
+      # === DISABLED: プレースホルダ出力 ===
+      - name: Write placeholder changelog & summary (SBOM temporarily disabled)
+        if: env.SBOM_TOOL == 'DISABLED'
         shell: bash
         run: |
           set -euo pipefail
           rel='${{ steps.ver.outputs.rel }}'
           prev='${{ steps.ver.outputs.prev }}'
           flavor='${{ matrix.flavor }}'
-          NEW="almalinux${rel}-${flavor}:${{ steps.ver.outputs.tag }}"
-          mkdir -p "sbom/$rel" "sbom/$prev"
-
-          NEW_JSON="sbom/$rel/$flavor.cdx.json"
-          for i in 1 2 3; do
-            syft "docker:$NEW" -o cyclonedx-json > "$NEW_JSON" && break
-            echo "syft NEW failed (try $i), retry..." >&2
-            sleep 5
-            [[ $i -eq 3 ]] && { echo "syft NEW failed 3 times"; exit 1; }
-          done
-          echo "new_json=$NEW_JSON" >> "$GITHUB_OUTPUT"
-
-          if [[ '${{ steps.oldimg.outputs.has_old }}' == 'true' ]]; then
-            OLD='${{ steps.oldimg.outputs.old_ref }}'
-            OLD_JSON="sbom/$prev/$flavor.cdx.json"
-            for i in 1 2 3; do
-              syft "docker:$OLD" -o cyclonedx-json > "$OLD_JSON" && break
-              echo "syft OLD failed (try $i), retry..." >&2
-              sleep 5
-              if [[ $i -eq 3 ]]; then
-                echo "syft OLD failed 3 times; treat as initial."
-                OLD_JSON=""
-                break
-              fi
-            done
-            if [[ -n "$OLD_JSON" ]]; then
-              echo "has_old_sbom=true" >> "$GITHUB_OUTPUT"
-              echo "old_json=$OLD_JSON" >> "$GITHUB_OUTPUT"
-            else
-              echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
-            fi
-          else
-            echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
-          fi
-
-      - name: Generate per-flavor SBOM diff (CycloneDX CLI)
-        shell: bash
-        run: |
-          set -euo pipefail
-          rel='${{ steps.ver.outputs.rel }}'
-          prev='${{ steps.ver.outputs.prev }}'
-          flavor='${{ matrix.flavor }}'
-          NEW_JSON='${{ steps.sbom.outputs.new_json }}'
-          OLD_JSON='${{ steps.sbom.outputs.old_json }}'
 
           OUT="RELEASE_CHANGELOG-${flavor}.md"
-          if [[ ! -f "$NEW_JSON" ]]; then
-            echo "NEW SBOM missing: $NEW_JSON" >&2
-            exit 1
-          fi
+          {
+            echo "# SBOM Diff (CycloneDX): $prev → $rel ($flavor)"
+            echo
+            echo "_SBOM generation is temporarily disabled for this workflow run._"
+            echo
+            echo "- NEW image: \`almalinux${rel}-${flavor}:${{ steps.ver.outputs.tag }}\`"
+            if [[ '${{ steps.oldimg.outputs.has_old }}' == 'true' ]]; then
+              echo "- OLD image: \`${{ steps.oldimg.outputs.old_ref }}\`"
+            else
+              echo "- OLD image: _(not available)_"
+            fi
+            echo
+            echo "When the new SBOM generator is ready, enable one of the SBOM_TOOL blocks and remove this placeholder."
+          } > "$OUT"
 
-          if [[ '${{ steps.sbom.outputs.has_old_sbom }}' != 'true' || ! -f "$OLD_JSON" ]]; then
-            {
-              echo "# Initial Release SBOM: AlmaLinux $rel ($flavor)"
-              echo
-              echo "- SBOM(new): \`$NEW_JSON\`"
-              echo
-              echo "_No previous SBOM to diff against._"
-            } > "$OUT"
-          else
-            {
-              echo "# SBOM Diff (CycloneDX): $prev → $rel ($flavor)"
-              echo
-              echo "- SBOM(old): \`$OLD_JSON\`"
-              echo "- SBOM(new): \`$NEW_JSON\`"
-              echo
-              echo "## Components diff"
-              echo '```'
-              cyclonedx diff --from-format json --to-format json \
-                "$OLD_JSON" "$NEW_JSON" --component-versions || true
-              echo '```'
-            } > "$OUT"
-          fi
-
-          # short summary json (counts) — 関数未使用で古い jq でも動く版
-          SUM="RELEASE_SUMMARY-${flavor}.json"
-          flavor="$flavor" rel="$rel" prev="$prev" \
-          jq -n --slurpfile old "$OLD_JSON" --slurpfile nw "$NEW_JSON" '
-            # 旧/新の components 配列を取り出し（null ガード）
-            ($old|length>0 and ($old[0]|type=="object")) as $hasOld |
-            ($nw|length>0  and ($nw[0]|type=="object"))  as $hasNew |
-            (if $hasOld then ($old[0].components // []) else [] end) as $OC |
-            (if $hasNew then ($nw[0].components  // []) else [] end) as $NC |
-
-            # key: purl 優先、無ければ group:name
-            (reduce $OC[] as $c ({}; .[
-              ( $c.purl // ( ($c.group // "") + ":" + ($c.name // "") ) )
-            ] = ($c.version // ""))) as $OS |
-
-            (reduce $NC[] as $c ({}; .[
-              ( $c.purl // ( ($c.group // "") + ":" + ($c.name // "") ) )
-            ] = ($c.version // ""))) as $NS |
-
-            ($OS | keys_unsorted) as $ok |
-            ($NS | keys_unsorted) as $nk |
-
-            ( [ $nk[] | select( ($OS[.] // null) == null ) ] | length ) as $added |
-            ( [ $ok[] | select( ($NS[.] // null) == null ) ] | length ) as $removed |
-            ( [ $nk[] | select( ($OS[.] // null) != null and ($NS[.] != $OS[.]) ) ] | length ) as $modified |
-
-            {
-              flavor: env.flavor,
-              old_rel: (env.prev|tonumber),
-              new_rel: (env.rel|tonumber),
-              added: $added,
-              removed: $removed,
-              modified: $modified,
-              note: (if ($hasOld and $hasNew) then "" else "no old/new sbom" end)
-            }' > "$SUM"
-
-          # 長文の .md は gzip も用意（本文に貼らずアセットで配布）
+          # summary は 0 件＋メモを残す
+          cat > "RELEASE_SUMMARY-${flavor}.json" <<'JSON'
+          {
+            "added": 0,
+            "removed": 0,
+            "modified": 0,
+            "note": "sbom generation disabled"
+          }
+          JSON
           gzip -9f < "$OUT" > "${OUT}.gz"
 
-      - name: Upload changelog artifact (md + gz)
+      - name: Upload changelog artifact (md + gz + summary json)
         uses: actions/upload-artifact@v4
         with:
           name: changelog-${{ matrix.flavor }}
@@ -210,7 +335,10 @@ jobs:
           if-no-files-found: error
           retention-days: 7
 
-      - name: Upload SBOM artifacts
+      # SBOM 実体の JSON は DISABLED では生成されないため、
+      # 有効化後に必要ならこのステップを再度活用してください。
+      # （if-no-files-found: ignore なので存在しなくても失敗しません）
+      - name: Upload SBOM artifacts (may be empty when disabled)
         uses: actions/upload-artifact@v4
         with:
           name: sbom-${{ steps.ver.outputs.rel }}-${{ matrix.flavor }}
@@ -245,14 +373,18 @@ jobs:
           pattern: '*'
           merge-multiple: true
 
-      - name: Build release body (summary table only; md gz は assets)
+      - name: Build release body (summary table only; md/gz は assets)
         id: body
         shell: bash
         run: |
           set -euo pipefail
           echo "Automated release for version ${{ steps.ver.outputs.tag }}." > body.txt
           echo >> body.txt
-          echo "Full SBOM diffs are attached as assets (RELEASE_CHANGELOG-*.md / .md.gz)." >> body.txt
+          if [[ "${SBOM_TOOL:-DISABLED}" == "DISABLED" ]]; then
+            echo "_Note: SBOM generation is temporarily disabled. Full diffs will return once the new generator is integrated._" >> body.txt
+          else
+            echo "Full SBOM diffs are attached as assets (RELEASE_CHANGELOG-*.md / .md.gz)." >> body.txt
+          fi
           echo >> body.txt
           printf "SBOM change summary (components)\n" >> body.txt
           printf "Flavor\tOld→New\tAdded\tRemoved\tModified (same name, version changed)\tNote\n" >> body.txt
@@ -262,7 +394,7 @@ jobs:
           for f in default base init micro minimal toolbox; do
             sum="RELEASE_SUMMARY-${f}.json"
             if [[ -f "$sum" ]]; then
-              added=$(jq -r '.added'    "$sum")
+              added=$(jq -r '.added' "$sum")
               removed=$(jq -r '.removed' "$sum")
               modified=$(jq -r '.modified' "$sum")
               note=$(jq -r '.note' "$sum")
@@ -288,5 +420,6 @@ jobs:
           files: |
             RELEASE_CHANGELOG-*.md
             RELEASE_CHANGELOG-*.md.gz
+            # SBOM JSON はツール有効化時のみ実体が存在する想定
             sbom/${{ steps.ver.outputs.rel }}/*.cdx.json
 
